<resources>
    <string name="app_name">Arabic Alphabet</string>
    <string name="btn_sign_by_google">Login with Google</string>
    <string name="title_setting">Setting</string>
    <string name="title_profile">Profile</string>
    <string name="title_courses">Courses</string>
    <string name="logOut">log out</string>
    <string name="arabic_alphabet">Arabic alphabet</string>
    <string name="to_practice">to practice</string>
    <string name="ok">OK</string>
    <string name="failed">Failed</string>
    <string name="made_3_mistakes">You made 3 mistakes</string>
    <string name="result">Result</string>
    <string name="finish">Finish</string>
    <string name="dayli_reminders">"Daily reminders at "</string>
    <string name="choose_more_3_leters">Choose more than three letters to practice!</string>
    <string name="its_practic_time">It\'s time to practice!</string>
    <string name="watch_the_video_ad_to_turn_off_ads_for_today_and_continue_your_training_in_comfort">Watch the video ad to turn off ads for today and continue your training in comfort</string>
    <string name="watch_ads">Watch ads</string>
    <string name="check_internet_connection">Error, check your internet connection!</string>
    <string name="practice">Practice</string>
    <string name="at_the_beginning_of_a_word">At the beginning of a word</string>
    <string name="in_the_middle_of_a_word">In the middle of a word</string>
    <string name="at_the_end_of_a_word">At the end of a word</string>
    <string name="alifba_tutorial_text_for_dialog">"
        \n1. Learn the available letters (They are highlighted in green)
        \n2. Do the practice without mistakes to open a new letter"</string>
    <string name="alifba_tutorial_title_for_dialog">Tutorial</string>
    <string name="horray">Hooray!</string>
    <string name="new_letter_is_opened">A new letter is open!</string>
</resources>